--- a/index.css
+++ b/index.css
@@ -40,7 +40,8 @@ font-weight: bold;
 #fils2
 {
 background-color: white;
-flex-basis: calc(100%/3);
+padding-top: 20px;
+height:200px;
 flex-direction: column;
 flex-wrap: wrap;
 justify-content: space-around;
@@ -49,7 +50,7 @@ justify-content: space-around;
 input
 {
 width: 80%;
-height: 100%;
+height:50px;
 border-radius: 7px;
 border: 1px solid rgb(73, 65, 65);
 position: relative;
