--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@ display: flex;
 flex-direction: column;
 background-color: rgb(16, 168, 16);
 overflow:hidden;
+box-shadow: 10px 10px 60px 10px rgba(0, 0, 0, 0.442);
 }
 
 .fils
@@ -51,8 +52,9 @@ input
 {
 width: 80%;
 height:50px;
-border-radius: 7px;
-border: 1px solid rgb(73, 65, 65);
+border-radius: 5px;
+border: none;
+border-bottom: 1px solid rgb(73, 65, 65);
 position: relative;
 box-sizing: border-box;
 overflow: hidden;
