--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ height: 100vh;
 {
 border-radius: 10px;
 width:500px;
-height:500px;
+height:70%;
 display: flex;
 flex-direction: column;
 background-color: rgb(16, 168, 16);
